[package]
name = "vitree"
version = "0.1.0"
edition = "2021"

authors = ["Stanislav Panferov <stanislav@panferov.dev>"]
description = "Virtualized tree UI component written in Rust"
homepage = "https://github.com/s-panferov/vitree"
keywords = ["web", "webasm", "javascript"]
categories = ["gui", "wasm", "web-programming"]
license = "MIT"

[dependencies]
downcast-rs= "1"
indexmap= "1"
bitflags= "1"
skima= "0"
wasm-bindgen= "0.2"
wasm-bindgen-futures= "0.4"
fxhash= "0.2"
js-sys= "0.3"
web-sys= {version = "0.3", features = [
  "MouseEvent"
]}
futures="*"
tracing="*"
